...
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="75dp">

            <Spinner
                android:id="@+id/spinnerPropriedade"
                android:layout_alignParentLeft="true"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:layout_height="74dp"
                android:layout_width="0dp"
                android:layout_marginBottom="@dimen/margin_inputs_form"
...
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/campo_confirmacao_dados"
            android:id="@+id/btnConfimarDados" />
    </LinearLayout>

</ScrollView>

